# ArtMuse-Backend

./: .gitignore  README.md  description.txt  main.py  metmuseum.py  package-lock.json  requirements.txt  upload_release.py
api/: config.py  database.py  main.py  models.py  painting.py  paintingMobile.py  requirements.txt  schemas.py
app/: .env  config.py  database.py  main.py  models.py  painting.py  schemas.py
artmuse/: package-lock.json  package.json
artmuse/src-tauri/: tauri.conf.json
artmuse/src-tauri/src/: main.rs
artmuse/src/app/: FloatingDiv.tsx  layout.tsx  page.tsx
artmuse/src/app/contact/: page.js
artmuse/src/app/privacy/: page.jsx
artmuseapp/: README.md  index.html  package-lock.json  package.json  state.json  tailwind.config.js
artmuseapp/src/: main.tsx  styles.css
artmuseapp/src-tauri/: Cargo.toml  tauri.conf.json
artmuseapp/src-tauri/icons/: icon.icns
artmuseapp/src-tauri/src/: main.rs
artmuseapp/src/app/: ChangeWallpaper.tsx  Favorite.tsx  Logo.tsx  PaintingDetails.tsx  Settings.tsx  globals.css  layout.tsx  page.tsx  types.tsx
artmuseapp/src/app/favorites/: PaintingRow.tsx  page.tsx
artmuseapp/src/app/settings/: page.tsx
artmuseapp/src/app/state/: api.tsx  init.tsx  manager.tsx
artmuseapp/src/components/favorites/: PaintingRow.jsx
artmuseapp/src/components/root/: Logo.tsx  (+2 more)
artmuseapp/src/routes/: favorites.jsx  root.jsx  settings.jsx
artmuseapp/src/state/: api.tsx  init.tsx  manager.tsx
menubar/: app.py  app.spec  main.py  main.spec
preprocessing/: README.md  a.txt  metmuseum.py  populate_database.py  test.py
(+1 files in other folders)
